# Simple-PGW-component

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  configure_and_run.sh
.github/workflows/: build.yaml  codecoverage.yaml  lint.yaml
scripts/: runner.py
settings/: client_settings.json  server_settings.json
src/: CMakeLists.txt  main.cpp
src/Client/: UdpClient.cpp  UdpClient.h  main.cpp
src/Common/: AbstractLogger.h  ClientLogger.h  ConfigLoader.h  ServerLogger.h
src/Pgw/: BlackListStorer.cpp  BlackListStorer.h  CdrWriter.cpp  CdrWriter.h  ConfigLoader.h  ControlPlaneServer.cpp  ControlPlaneServer.h  SessionManager.cpp  SessionManager.h  UdpServer.cpp  UdpServer.h
tests/: CMakeLists.txt  ServerTests.cpp
